Add one-line installation command to apt.tuliocp.com index
- Add curl-based setup script as recommended installation method
- Keep existing wget method as alternative option
- Improve installation section organization

--- a/apt-repo/index.html
+++ b/apt-repo/index.html
@@ -188,7 +188,10 @@
         <div class="content">
             <div class="usage">
                 <h2>📦 Quick Installation</h2>
-                <p>Install TulioCP with a single command:</p>
+                <p>Install TulioCP with a single command (recommended):</p>
+                <pre><button class="copy-btn" onclick="copyToClipboard('curl -sSL https://apt.tuliocp.com/setup.sh | sudo bash')">Copy</button>curl -sSL https://apt.tuliocp.com/setup.sh | sudo bash</pre>
+                
+                <p>Alternative installation method:</p>
                 <pre><button class="copy-btn" onclick="copyToClipboard('wget https://raw.githubusercontent.com/Contaura/tuliocp/main/install/hst-install.sh && sudo bash hst-install.sh')">Copy</button>wget https://raw.githubusercontent.com/Contaura/tuliocp/main/install/hst-install.sh
 sudo bash hst-install.sh</pre>
             </div>
